maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: illegal start of statement
		 match {
                 ^